[package]
name = "dydx-proto"
version = "0.4.0"
edition = "2021"
description = "Compiled dYdX protobuf files"
repository = "https://github.com/dydxprotocol/v4-chain/tree/main/v4-proto-rs"
license = "LicenseRef-dYdX-Custom"

[lib]
doctest = false

[features]
default = ["grpc-transport"]
grpc-transport = ["tonic/transport"]

[dependencies]
cosmos-sdk-proto = { version = "0.27", default-features = false, features = ["grpc"] }
prost = { version = "0.13", default-features = false }
prost-types = "0.13"
tonic = { version = "0.13", default-features = false, features = ["codegen", "prost"] }

[build-dependencies]
regex = "1.11.1"
tonic-buf-build = "0.3.1"
prost-build = "0.13" # keep the version the same as in tonic-buf-build
tonic-build = "0.13" # keep the version the same as in tonic-buf-build
